--- a/AOC2024.fsproj
+++ b/AOC2024.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Day7P2.fs" />
     <Compile Include="Day7.fs" />
     <Compile Include="Utils.fs" />
     <Compile Include="Program.fs" />
